--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 *{
-  margin: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
   box-sizing: border-box;
 }
 
@@ -9,5 +10,77 @@ body, html{
 }
 
 body{
+  margin: 0px;
   border: 2px solid salmon;
+  font-family: sans-serif;
+}
+
+
+/* style for header and its children////////////////////////// */
+header{
+  background-color: #2e3d49;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 10px;
+}
+
+/* style for the header with id search title */
+#search-title{
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 300;
+  color: white;
+}
+
+/* style for the form, and other form elements */
+#search-form{
+  padding: 2px;
+
+  /* flex-container part */
+  display: flex;
+  justify-content: space-around;
+}
+
+/* display: none is for mobile devices */
+#search-label{
+  display: none;
+}
+
+#search-input{
+  flex-grow: 1;
+  max-width: 70%;
+
+  text-align: center;
+  font-size: 1.2em;
+
+  margin-right: 5px;
+  margin-left: 2px;
+
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+#search-input:hover,
+#search-input:active{
+  box-shadow: 0px 5px 5px rgb(219, 213, 213);
+  border-bottom: 1px solid grey;
+}
+
+
+#search-submit{
+
+  font-size: 1em;
+
+  min-width: 50px;
+  padding: 10px;
+
+  background-color: #15c26b;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+
+
+  text-transform: uppercase;
 }
