--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,23 +1,33 @@
-*{
+* {
   margin-left: 0px;
   margin-right: 0px;
   box-sizing: border-box;
 }
 
-body, html{
+body,
+html {
   width: 100%;
   height: 100%;
 }
 
-body{
+body {
   margin: 0px;
-  border: 2px solid salmon;
   font-family: sans-serif;
 }
 
+/* style for the div#app container component... */
+#app {
+  width: 100%;
+  height: 100%;
+
+  /* flex-container part */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
 
 /* style for header and its children////////////////////////// */
-header{
+header {
   background-color: #2e3d49;
   display: flex;
   flex-direction: column;
@@ -25,7 +35,7 @@ header{
 }
 
 /* style for the header with id search title */
-#search-title{
+#search-title {
   text-align: center;
   font-size: 1.5em;
   font-weight: 300;
@@ -33,7 +43,7 @@ header{
 }
 
 /* style for the form, and other form elements */
-#search-form{
+#search-form {
   padding: 2px;
 
   /* flex-container part */
@@ -42,11 +52,12 @@ header{
 }
 
 /* display: none is for mobile devices */
-#search-label{
+#search-label {
   display: none;
 }
 
-#search-input{
+/* style for the text input field */
+#search-input {
   flex-grow: 1;
   max-width: 70%;
 
@@ -61,17 +72,16 @@ header{
   border-radius: 5px;
 }
 
+/* hover and focus state styles for search input box... */
 #search-input:hover,
-#search-input:active{
-  box-shadow: 0px 5px 5px rgb(219, 213, 213);
-  border-bottom: 1px solid grey;
+#search-input:focus {
+  box-shadow: 0px 5px 5px #98b9d4;
 }
 
-
-#search-submit{
-
+/* style for submit button for search... */
+#search-submit {
+  text-transform: uppercase;
   font-size: 1em;
-
   min-width: 50px;
   padding: 10px;
 
@@ -80,7 +90,20 @@ header{
   border: none;
   border-radius: 3px;
   cursor: pointer;
+}
 
 
-  text-transform: uppercase;
+/* style for the main element and its children...////////////// */
+#data-container{
+  border: 2px solid dodgerblue;
+}
+
+/* style for the image container */
+#img-container{
+  border: 2px solid green;
+}
+
+/* style for the articles container */
+#articles-container{
+  border: 2px solid red;
 }
