--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,23 +7,44 @@
 body,
 html {
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
+}
+
+html{
+  background-color: #8eaec8;
 }
 
 body {
-  margin: 0px;
+  height: 100%;
+  /* border: 2px solid red; */
+
+  /* margin-right: 10px; */
   font-family: sans-serif;
+
+  max-width: 800px;
+  margin: 0px auto;
+  overflow-y: scroll;
+}
+
+/* styles for scrollbar added to the body element... */
+body::-webkit-scrollbar {
+  width: 4px;
+  background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: dodgerblue;
 }
 
 /* style for the div#app container component... */
 #app {
   width: 100%;
-  /* height: 100%; */
-
   /* flex-container part */
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
+
+  position: relative;
 }
 
 /* style for header and its children////////////////////////// */
@@ -32,6 +53,10 @@ header {
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
+
+  position: sticky;
+  top: 0px;
+  left: 0px;
 }
 
 /* style for the header with id search title */
@@ -48,7 +73,7 @@ header {
 
   /* flex-container part */
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 /* display: none is for mobile devices */
@@ -116,6 +141,8 @@ figure {
 figure img {
   width: 100%;
   box-shadow: 0 5px 5px lightgray;
+
+  
 }
 
 figcaption {
@@ -151,6 +178,7 @@ figcaption {
 
 /* style for an article container */
 .article {
+  width: 100%;
   background: url("../images/icon-article.png"), #ffffff;
   background-position: 1.5em 1.2em;
   background-repeat: no-repeat;
