--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ figcaption {
 /* style for an article container */
 .article {
   width: 100%;
-  background: url("../images/icon-article.png"), #ffffff;
+  background: url("./images/icon-article.png"), #ffffff;
   background-position: 1.5em 1.2em;
   background-repeat: no-repeat;
   background-size: 1.8em;
